@@ -384,9 +384,12 @@ CgHttpResponse *cg_https_request_post(CgHttpRequest *httpReq, char *ipaddr, int 
 BOOL cg_http_request_read(CgHttpRequest *httpReq, CgSocket *sock);
 BOOL cg_http_request_postresponse(CgHttpRequest *httpReq, CgHttpResponse *httpRes);
 BOOL cg_http_request_poststatuscode(CgHttpRequest *httpReq, int httpStatCode);
+BOOL cg_http_request_postdata(CgHttpRequest *httpReq, void *data, int dataLen);
 BOOL cg_http_request_postchunkedsize(CgHttpRequest *httpReq, int dataLen);
 BOOL cg_http_request_postchunkeddata(CgHttpRequest *httpReq, void *data, int dataLen);
 BOOL cg_http_request_postlastchunk(CgHttpRequest *httpReq);
+#define cg_http_request_postdata(httpReq, data, dataLen) cg_socket_write(cg_http_request_getsocket(httpReq), data, dataLen)
+#define cg_http_request_poststring(httpReq, data) cg_http_request_postdata(httpReq, data, cg_strlen(data))
 #define cg_http_request_postchunkedstring(httpReq, data) cg_http_request_postchunkeddata(httpReq, data, cg_strlen(data))
 
 #define cg_http_request_postokrequest(httpReq) cg_http_request_poststatuscode(httpReq, CG_HTTP_STATUS_OK)
